--- a/app/jgps/trunk/server/webapp/locmenu.html
+++ b/app/jgps/trunk/server/webapp/locmenu.html
@@ -3,6 +3,7 @@
 		<li><a href="#">Sessie</a>
 			<ul>
 				<li><a href="#" fn="LOCAPP.startSession">start sessie</a></li>
+				<li><a href="#" fn="LOCAPP.starteditSession">start editsessie</a></li>
 			</ul>
 		</li>
 		<li><a href="#">Routes</a>
