--- a/app/jgps/trunk/server/webapp/static-layout-header.html
+++ b/app/jgps/trunk/server/webapp/static-layout-header.html
@@ -11,7 +11,7 @@
 <table width="900" border="0" cellspacing="0" cellpadding="0">
 <tr>
 	<td width="170" rowspan="4">&nbsp;</td>
-	<td colspan="2" class="logoteksthome">Jeugd GePoSitioneerd</td>
+	<td colspan="2" class="logoteksthome"></td>
 	<td colspan="2">&nbsp;</td>
 </tr>
 <tr>
@@ -21,14 +21,15 @@
 <!--		<div class="navtekst"><a href="http://www.senseofthecity.nl">sense of the city</a></div>  -->
 		<div class="navtekst"><a href="sense.jsp">Jeugd GePoSitioneerd</a></div>
 		<div class="navtekst"><a href="deelnemers.jsp">deelnemers</a></div>
-		<div class="navtekst"><a href="locatie-map.jsp?punt=4.203817,50.795272&zoom=9">Kaart</a></div>
+		<div class="navtekst"><a href="kaart.jsp">Kaart</a></div>
+		<div class="navtekst"><a href="Handleiding.jsp">Handleiding</a></div>
 	</td>
 </tr>
 <tr>
 	<td width="170" bgcolor="#004b7d">&nbsp;</td>
-	<td width="170" bgcolor="#004b7d">&nbsp;</td>
-	<td width="170" bgcolor="#004b7d">&nbsp;</td>
-	<td width="320" bgcolor="#004b7d"><div align="right">
+	<td width="190" bgcolor="#004b7d">&nbsp;</td>
+	<td width="190" bgcolor="#004b7d">&nbsp;</td>
+	<td width="272" bgcolor="#004b7d"><div align="right">
 		<img src="images/sitewide1.jpg" alt="sitewide menu" width="200" height="15" hspace="15" border="0"
 			 usemap="#Map"/></div></td>
 </tr>
