base: fix postgis column order problems for DB creation

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -118,9 +118,9 @@
 	</td>
 	<td align="center">
 		<p>
-			<a target="_new" href="http://kwlabs-blog.waag.org/mediawiki/index.php/KWLocativeMedia">
-				<img src="img/gt-mlgk.jpg" title="formerly known as Mobile Learning Game Kit (MLGK), in cooperation with Waag Society"border="0"><br>
-				WalkAndPlay
+			<a target="_new" href="http://www.mlgk.nl">
+				<img src="img/gt-mlgk.jpg" title="Create and play locative mobile games (cooperation with Waag Society)"border="0"><br>
+				Mobile Learning Game Kit
 			</a>
 		</p>
 	</td>
@@ -177,7 +177,13 @@
 	</td>
 
 	<td align="center">
-		&nbsp;
+		<p>
+
+			<a target="_new" href="http://www.digitalewichelroede.nl">
+				<img src="img/gt-diwi.jpg" title="create personalized routes (cooperation with Waag Society, WUR, Alterra)" alt="" border="0"><br>
+				Digital Dowsing Rod
+			</a>
+		</p>
 	</td>
 	<td align="center">
 		&nbsp;
