--- a/app/jgps/trunk/server/webapp/locationapp/update-location-form.html
+++ b/app/jgps/trunk/server/webapp/locationapp/update-location-form.html
@@ -1,3 +1,4 @@
+
 <form id="updatelocationform" name="updatelocationform" enctype="multipart/form-data" method="post" action="media.srv">
 	<table>
 		<tr>
@@ -47,7 +48,7 @@
 				</tr>       -->
 		<tr>
 			<td colspan="2">
-				<a href="#" onclick="return LOCAPP.updateLocationReq();" style="color:blue">[Update Location]</a>
+				<a href="#" onclick="return LOCAPP.updateLocation();" style="color:blue">[Update Location]</a>
 			</td>
 		</tr>
 	</table>
