--- a/app/jgps/trunk/server/webapp/static-layout-header.html
+++ b/app/jgps/trunk/server/webapp/static-layout-header.html
@@ -20,7 +20,7 @@
 	<td width="320">
 <!--		<div class="navtekst"><a href="http://www.senseofthecity.nl">sense of the city</a></div>  -->
 		<div class="navtekst"><a href="sense.jsp">Jeugd GePoSitioneerd</a></div>
-		<div class="navtekst"><a href="deelnemers.jsp">deelnemers</a></div>
+		<div class="navtekst"><a href="deelnemers.jsp">Gemeenten</a></div>
 		<div class="navtekst"><a href="kaart.jsp">Kaart</a></div>
 		<div class="navtekst"><a href="Handleiding.jsp">Handleiding</a></div>
 	</td>
