geosailing: more functions

--- a/app/geosailing/trunk/server/webapp/mainmenu.html
+++ b/app/geosailing/trunk/server/webapp/mainmenu.html
@@ -1,16 +1,16 @@
 <div id="mainmenu" class="mn-container">
 	<ul class="mn-content">
-		<li><a href="#">Show</a>
+		<li><a href="#">Bekijk</a>
 			<ul>
-				<li><a href="#" fn="GTAPP.mLive">Volg Boten</a></li>
-				<li><a href="#" fn="GTAPP.mArchive">Archief</a></li>
+				<li><a href="#" fn="GTAPP.mLive">Actieve Boten</a></li>
+				<li><a href="#" fn="GTAPP.mArchive">Routes</a></li>
 				<!-- <li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="30">Media (max 30)</a></li> -->
 			</ul>
 		</li>
 
 		<li><a href="#">Help</a>
 			<ul>
-				<li><a href="#" fn="GTAPP.mShowHelp" arg="content/navhelp.html">Map Navigation</a></li>
+				<li><a href="#" fn="GTAPP.mShowHelp" arg="content/navhelp.html">Kaart Navigatie</a></li>
 				<li><a href="#" fn="GTAPP.mShowHelp" arg="content/trkhelp.html">Displaying Info</a></li>
 				<li><a href="#" fn="GTAPP.mShowHelp" arg="content/appabout.html">Over Realtime Schuttevaer</a></li>
 				<li><a href="#" fn="GTAPP.mShowHelp" arg="content/gtabout.html">Over GeoTracing</a></li>
