--- a/app/jgps/trunk/server/webapp/locmenu.html
+++ b/app/jgps/trunk/server/webapp/locmenu.html
@@ -2,25 +2,11 @@
 	<ul class="mn-content">
 		<li><a href="#">Sessie</a>
 			<ul>
-				<li><a href="#" fn="LOCAPP.startSession">start sessie</a></li>
-				<li><a href="#" fn="LOCAPP.starteditSession">start editsessie</a></li>
+				<li><a href="#" fn="LOCAPP.startSession">leessessie</a></li>
+				<li><a href="#" fn="LOCAPP.starteditSession">bewerksessie</a></li>
 			</ul>
 		</li>
-		<li><a href="#">Routes</a>
-			<ul>
-				<li><a href="#" fn="GTAPP.mLastTracks" arg="10">laatste 10</a></li>
-				<li><a href="#" fn="GTAPP.mArchive">per deelnemer</a></li>
-				<li><a href="#" fn="GTAPP.mAutoPlay">autoplay (willekeurig afspelen)</a></li>
-			</ul>
-		</li>
-		<li><a href="#">Foto's</a>
-			<ul>
-				<li><a href="#" fn="GTAPP.mShowRecentMedia" arg="25">laatste 25</a></li>
-				<li><a href="#" fn="GTAPP.mShowMedia" arg="25">25 willekeurig</a></li>
-				<li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="25">25 willekeurig in zichtbaar gebied</a></li>
-				<!-- <li><a href="#" fn="MYAPP.menufunctie" >mijnmenu</a></li>  -->
-			</ul>
-		</li>
+
 <!--		<li><a href="#">Login</a>
 			<ul>
 				<li><a href="#" fn="GTAPP.mMy" >Login</a></li>
