--- a/app/jgps/trunk/server/webapp/static-layout-header.html
+++ b/app/jgps/trunk/server/webapp/static-layout-header.html
@@ -8,28 +8,29 @@
 </head>
 
 <body>
-<table width="900" border="0" cellspacing="0" cellpadding="0">
+<table width="1000" border="0" cellspacing="0" cellpadding="0">
 <tr>
 	<td width="170" rowspan="4">&nbsp;</td>
 	<td colspan="2" class="logoteksthome"></td>
 	<td colspan="2">&nbsp;</td>
 </tr>
 <tr>
-	<td width="510" colspan=3><img src="images/JGPS_logo02.jpg" alt="Jeugd Gepositioneerd" width="450" height="100" hspace="0" vspace="0"/></td>
+	<td colspan=3 width="510"><img src="images/JGPS_logo02.jpg" alt="Jeugd Gepositioneerd" width="290" height="100" hspace="0" vspace="0"/></td>
 	</td>
-	<td width="320">
+	<td width="320" align="center">
 <!--		<div class="navtekst"><a href="http://www.senseofthecity.nl">sense of the city</a></div>  -->
 		<div class="navtekst"><a href="sense.jsp">Jeugd GePoSitioneerd</a></div>
-		<div class="navtekst"><a href="deelnemers.jsp">Gemeenten</a></div>
-		<div class="navtekst"><a href="kaart.jsp">Kaart</a></div>
+		<div class="navtekst"><a href="deelnemers.jsp">Gemeentes</a></div>
 		<div class="navtekst"><a href="Handleiding.jsp">Handleiding</a></div>
+		<div class="navtekst"><a href="Registreren.jsp">Registreren</a></div>
 	</td>
+	
 </tr>
-<tr>
+<tr >
 	<td width="170" bgcolor="#004b7d">&nbsp;</td>
-	<td width="190" bgcolor="#004b7d">&nbsp;</td>
-	<td width="190" bgcolor="#004b7d">&nbsp;</td>
-	<td width="272" bgcolor="#004b7d"><div align="right">
+	<td width="170" bgcolor="#004b7d">&nbsp;</td>
+	<td width="170" bgcolor="#004b7d">&nbsp;</td>
+	<td width="320" bgcolor="#004b7d" align="right">
 		<img src="images/sitewide1.jpg" alt="sitewide menu" width="200" height="15" hspace="15" border="0"
-			 usemap="#Map"/></div></td>
+			 usemap="#Map"/></td>
 </tr>
