geosailing: first version schuttevaer 2007

--- a/app/geosailing/trunk/svr2007/server/webapp/mainmenu.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/mainmenu.html
@@ -3,8 +3,8 @@
 		<li><a href="#">Bekijk</a>
 			<ul>
 				<li><a href="#" fn="GTAPP.mLive">Actieve Boten</a></li>
-				<li><a href="#" fn="GTAPP.mArchive">Routes</a></li>
-				<!-- <li><a href="#" fn="GTAPP.mShowMediaInBbox" arg="30">Media (max 30)</a></li> -->
+				<li><a href="#" fn="GTAPP.mAllTracks">Afgelegde Routes</a></li>
+				<li><a href="#" fn="GTAPP.mShowMedia" arg="250">Foto's</a></li>
 			</ul>
 		</li>
 
