--- a/app/geosailing/trunk/svr2007/server/webapp/index.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/widget.css"/>
 	<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
 	<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
-	<link rel="stylesheet" type="text/css" href="sidebar/css/mockup.css"/>
+	<link rel="stylesheet" type="text/css" href="sidebar/css/mockup2.css"/>
 
 	<script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
 	<script type="text/javascript" src="lib/DHTML.js"></script>
@@ -103,7 +103,7 @@
 
 							<div class="sponsorbox" id="sponsor"><a id="sponsorlink" target="_blank"
 																	href="http://www.devriessails.nl"><img
-									id="sponsorimg" width="320" height="80" src="img/logo/devriessailsW.gif" border="0"
+									id="sponsorimg"  src="img/logo/devriessailsW.gif" border="0"
 									alt="logo"/></a></div>
 
 							<!-- <div class="sponsorbox">
