--- a/app/geosailing/trunk/svr2007/server/webapp/content/help.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/content/help.html
@@ -1,4 +1,5 @@
-<div class="help">
+<div class="popup">
+	<p><b><i>Hier komt help tekst. Moet dus nog gemaakt....</i></b></p>
 	<h2>How to Navigate the Map</h2>
 	<hr/>
 
@@ -34,20 +35,5 @@
 		Choose a different map as background by using the options under the "Map" menu.
 		Some map-types may contain specific data/features like GPS-trace points.
 	</p>
-	<h3>Advanced: passing page parameters</h3>
-	<p>
-		Initial map parameters for zoom, map center and map name,
-		may be passed as page parameters accessing the main page.
-	</p>
-	<p>
-		For example: <a target="_new" href="http://www.geotracing.com/gt?center=-2.25,53.4833&map=satellite&zoom=12">www.geotracing.com/gt?center=-2.25,53.4833&map=satellite&zoom=12</a>
-		<br/>Allowed parameters are:
-	</p>
-	<p>
-		<ul>
-			<li><code>center</code>: lon,lat value in fractional decimal</li>
-			<li><code>map</code>: map name (see menu mapnames), e.g. "streets", "blanc"</li>
-			<li><code>zoom</code>: Google Map2  zoomlevel (values 1-18, zoomed out to zoomed in)</li>
-		</ul>
-	</p>
+
 </div>
