--- a/app/geosailing/trunk/svr2007/server/webapp/index.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/widget.css"/>
 	<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
 	<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
-	<link rel="stylesheet" type="text/css" href="sidebar/css/mockup2.css"/>
+	<link rel="stylesheet" type="text/css" href="sidebar/css/mockup.css"/>
 
 	<script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
 	<script type="text/javascript" src="lib/DHTML.js"></script>
