geosailing: commiting to save stuff...

--- a/app/geosailing/trunk/svr2007/server/webapp/index.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
 	<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
 	<link rel="stylesheet" type="text/css" href="sidebar/css/mockup.css"/>
+	<link rel="stylesheet" type="text/css" href="popup/css/popup.css"/>
 
 	<script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
 	<script type="text/javascript" src="lib/DHTML.js"></script>
@@ -41,7 +42,7 @@
 
 					<div id="buttons">
 						<div class="helpbutton">
-							<a href="#" onclick="MYAPP.mShowHelp('content/help.html')">help</a>
+							<a href="#" onclick="MYAPP.mShowHelp('popup/help.html')">help</a>
 						</div>
 
 						<div class="resetbutton">
