--- a/app/geosailing/trunk/svr2007/server/webapp/popup/boot.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/boot.html
@@ -1,25 +1,56 @@
-(hier komen details over de boot:...)
-
-<table border="0" cellpadding="0" cellspacing="0">
-	<tr>
-		<td align="left">
-			[info] [media] [commentaar]
-		</td>
-	</tr>
-	<tr>
-		<td align="center" width="240">
-			<span id="tracerid">boot naam</span>
-		</td>
-		<td rowspan="2" width="80">
-			<img id="tracerimg" height="60" width="80" src="img/default-user-thumb-4x3.jpg"
-				 align="right" alt="user thumb" hspace="0" vspace="0"/>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" width="240">
-			<div id="tracerdesc">
-				(boot beschrijving)
-			</div>
-		</td>
-	</tr>
-</table>
+<div class="popup" id="boatpopup">
+	<div id="boatpopupbuttons">
+		<div id="boatpopupinfobutton"><a href="#" onclick="BOAT.onShowInfo()">info</a></div><div id="boatpopupmediabutton"><a href="#" onclick="BOAT.onShowMedia()">foto's</a></div>
+	</div>
+	<br/>
+	<div id="boatpopupinfo">
+		<table border="0" cellpadding="0" cellspacing="0">
+			<tr>
+				<td align="center" >
+					<span id="tracerid">boot naam</span>
+				</td>
+				<td rowspan="2" width="80">
+					<img id="tracerimg" height="60" width="80" src="img/default-user-thumb-4x3.jpg"
+						 align="right" alt="user thumb" hspace="0" vspace="0"/>
+				</td>
+			</tr>
+			<tr>
+				<td align="left" >
+					<div id="tracerdesc">
+						(boot beschrijving)
+					</div>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div id="boatpopupmedia">
+		<table border="0" cellpadding="0" cellspacing="0">
+			<tr>
+				<td height="20" bgcolor="#000066">
+					<div id="featuretitle" class="infohead">FEATURE TITLE</div>
+				</td>
+			</tr>
+			<tr>
+				<td height="240" width="320" valign="middle" align="center" bgcolor="#dddddd">
+					<div id="featurepreview">MEDIA PREVIEW</div>
+				</td>
+			</tr>
+			<tr>
+				<td height="18" bgcolor="#111111">
+					<div id="featurecontrols" class="controls">
+						<span class="control" id="featfirst"><img title="first feature" src="img/media-skip-backward.png" border="0 "alt="ctrl"onload="DH.fixPNG(this)"  /></span>
+						<span class="control" id="featprev"><img title="previous feature" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+						<span class="control" id="featnext"><img title="next feature" src="img/media-seek-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+						<span class="control" id="featlast"><img title="last feature" src="img/media-skip-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td align="left">
+					<div id="featureinfo">FEATURE INFO</div>
+					<div id="featuredesc">feature description (if available)</div>
+				</td>
+			</tr>
+		</table>
+	</div>
+</div>
