geoosaling: committing stable version

--- a/app/geosailing/trunk/svr2007/server/webapp/popup/boot.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/boot.html
@@ -11,6 +11,9 @@
 			(nog geen slogan)
 		</div>
 		<div>
+			regnr: <span id="regnr">(onbekend)</span>
+		</div>
+		<div>
 			thuishaven: <span id="thuishaven">(onbekend)</span>
 		</div>
 		<div>
