geosailing: finishing popup window

--- a/app/geosailing/trunk/svr2007/server/webapp/popup/boot.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/boot.html
@@ -5,7 +5,7 @@
 	<br/>
 	<div id="boatpopupinfo">
 		<h2><div id="tracerid">boot naam</div></h2>
-		<div><img id="tracerimg" height="60" width="80" src="img/default-user-thumb-4x3.jpg"
+		<div><img id="tracerimg" width="160" height="120"  src="img/default-user-thumb-4x3.jpg"
 						 align="right" alt="user thumb" hspace="0" vspace="0"/></div>
 		<div id="slogan">
 			(nog geen slogan)
@@ -41,11 +41,6 @@
 	<div id="boatpopupmedia">
 		<table border="0" width="100%" cellpadding="0" cellspacing="0">
 			<tr>
-				<td height="20" bgcolor="#000066">
-					<div id="featuretitle" class="infohead">(foto titel)</div>
-				</td>
-			</tr>
-			<tr>
 				<td height="240" valign="middle" align="center" bgcolor="#dddddd">
 					<div id="featurepreview">(foto preview)</div>
 				</td>
@@ -61,8 +56,13 @@
 				</td>
 			</tr>
 			<tr>
+				<td height="20">
+					<span id="featuretitle">(foto titel)</span><span id="featureinfo">algemene foto info (datum etc)</span>
+				</td>
+			</tr>
+			<tr>
 				<td align="left">
-					<div id="featureinfo">algemene foto info (datum etc)</div>
+
 					<div id="featuredesc">foto beschrijving (indien aanwezig)</div>
 				</td>
 			</tr>
