geosailing: first stable version

--- a/app/geosailing/trunk/svr2007/server/webapp/popup/help.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/help.html
@@ -1,4 +1,4 @@
-<div class="popup">
+<div class="infopopup">
 	<p><b><i>Hier komt help tekst. Moet dus nog gemaakt....</i></b></p>
 	<h2>How to Navigate the Map</h2>
 	<hr/>
