--- a/app/geosailing/trunk/svr2007/server/webapp/index.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/index.html
@@ -16,7 +16,7 @@
 	<!--[if IE 6]>
  		<link href="sidebar/css/ie6.css" rel="stylesheet" type="text/css" />
  	<![endif]-->
-	<link rel="stylesheet" type="text/css" href="popup/css/popup.css"/>
+	<link rel="stylesheet" type="text/css" href="popup/css/infopopup.css"/>
 
 	<script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
 	<script type="text/javascript" src="lib/DHTML.js"></script>
